--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver=com.mysql.cj.jdbc.Driver
 
 #jpa/Hibernate configurations
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-jpa=true
+spring.jpa.show-sql=true
 
 #dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
